<resources>
    <string name="app_name">Web Service Carros</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Títulos nas UIs -->
    <string name="title_fragment_listcarros">Lista de Carros</string>
    <string name="title_fragment_detalhecarro">Detalhes do Carro</string>
    <string name="title_fragment_edicaocarro">Edição do Carro</string>
    <string name="title_fragment_novocarro">Novo Carro</string>

    <!-- Navigation Drawer -->
    <string name="nav_listcarros">Lista de Carros</string>
    <string name="nav_sobre">Sobre</string>
    <string name="nav_configuracoes">Configurações</string>

    <!-- Menu em menu_fragment_carros -->
    <string name="action_pesquisar">Pesquisar</string>
    <string name="action_novo">Novo</string>

    <!-- Menu em menu_fragment_edicaocarro.xml-->
    <string name="action_salvar">Salvar</string>
    <string name="action_excluir">Excluir</string>

    <!-- Menu em menu_fragment_detalhecarro.xml -->
    <string name="action_editar">Editar</string>

    <!-- Tipo de Carros, como é persistido no BD -->
    <string name="tipo_todos">todos</string>
    <string name="tipo_classicos">classicos</string>
    <string name="tipo_esportivos">esportivos</string>
    <string name="tipo_luxo">luxo</string>

    <!-- Tabs -->
    <string name="tabs_todos">Todos</string>
    <string name="tabs_classicos">Clássicos</string>
    <string name="tabs_esportivos">Esportivos</string>
    <string name="tabs_luxo">Luxo</string>

    <!-- SearchView -->
    <string name="hint_searchview">pesquisar por nome</string>

    <!-- Textos para os layouts dos Fragmentos Novo, Detalhe e Edicao -->
    <string name="tipo_textview">Tipo:</string>
    <string name="nome_textview">Nome:</string>
    <string name="desc_textview">Descrição:</string>
    <string name="Foto_textview">Foto:</string>
    <string name="Info_textview">Vídeo:</string>
    <string name="latitude_textview">Latitude:</string>
    <string name="longitude_textview">Longitude:</string>
    <string name="urlfoto_textview">URL Foto</string>
    <string name="urlvideo_textview">URL Vídeo</string>
    <string name="urlvideo_hint">Clique para obter a URL</string>

    <!-- Alert Dialog -->
    <string name="title_conectividade">Alerta de conectividade.</string>
    <string name="msg_conectividade">Não há conexão com a internet. Vefirique se você ligou o wi-fi ou os dados móveis.</string>
    <string name="title_erro">Erro</string>
    <string name="msg_erro_falhanodownload">Falha ao executar o download.</string>
    <string name="title_confirmacao">Confirmação</string>
    <string name="msg_realizadocomsucesso">Operação realizada com sucesso.</string>
    <string name="alertdialog_buttom_ok">OK</string>


    <!-- ProgressDialog -->
    <string name="progressdialog_wait">Processando ... Aguarde.</string>

    <!-- Mensagens Toasts -->
    <string name="msg_toast_naohavideo">Não há vídeo cadastrado.</string>

    <string name="val_dadosinputs">Você deve inserir pelo menos o nome do carro.</string>

</resources>
