<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="Configurações">
            <item
                android:id="@+id/nav_fragment_list_carros"
                android:icon="@drawable/ic_drawer_carro"
                android:title="@string/nav_listcarros" />
            <item
                android:id="@+id/nav_fragment_sobre"
                android:icon="@drawable/ic_drawer_site_livro"
                android:title="@string/nav_sobre" />
        </item>
    </group>

    <item android:title="Configurações">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_drawer_settings"
                android:title="@string/nav_configuracoes" />
        </menu>
    </item>

</menu>
