<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_novo_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:clickable="true"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp"
            android:foreground="?attr/selectableItemBackground" >

            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:id="@+id/imv_card0_frnovocarro"
                android:text="URL da foto"
                android:layout_gravity="center"
                android:src="@drawable/car_background" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_novo_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:clickable="true"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp"
            android:foreground="?attr/selectableItemBackground" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_classicos"
                    android:id="@+id/rb_classicos_card1_frnovocarro" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_esportivos"
                    android:id="@+id/rb_esportivo_card1_frnovocarro" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_luxo"
                    android:id="@+id/rb_luxo_card1_frnovocarro" />
            </RadioGroup>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_novo_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:clickable="true"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp"
            android:foreground="?attr/selectableItemBackground" >


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_textview"
                    android:id="@+id/textView2" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etNome_card2_frnovocarro" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_textview"
                    android:id="@+id/textView3" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etDescricao_card2_frnovocarro" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_novo_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:clickable="true"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp"
            android:foreground="?attr/selectableItemBackground" >


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude_textview"
                    android:id="@+id/textView4" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etlatitude_card3_frnovocarro" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude_textview"
                    android:id="@+id/textView5" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etlongitude_card3_frnovocarro" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_novo_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:clickable="true"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp"
            android:foreground="?attr/selectableItemBackground" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/urlvideo_textview"
                    android:id="@+id/textView6" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etURLVideo__card4_frnovocarro"
                    android:focusable="false"
                    android:hint="@string/urlvideo_hint" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    </ScrollView>

</FrameLayout>