<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_detalhe_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:clickable="false"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp"
            android:foreground="?attr/selectableItemBackground" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvNome_card0_frdetalhecarro"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="normal" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:id="@+id/imv_card0_frdetalhecarro"
                        android:layout_gravity="center" />
                </LinearLayout>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pb_card0_frdetalhecarro"
                    android:layout_gravity="center" />
            </FrameLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_detalhe_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:clickable="false"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp"
            android:foreground="?attr/selectableItemBackground" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_classicos"
                    android:id="@+id/rbclassicos_card1_detalhecarro" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_esportivos"
                    android:id="@+id/rbespotivos_card1_detalhecarro" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_luxo"
                    android:id="@+id/rbluxo_card1_detalhecarro" />
            </RadioGroup>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_detalhe_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:clickable="false"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp"
            android:foreground="?attr/selectableItemBackground" >


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_textview"
                    android:id="@+id/textView3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDescricao_card2_frdetalhecarro" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_detalhe_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:clickable="false"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp"
            android:foreground="?attr/selectableItemBackground" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/latitude_textview"
                            android:id="@+id/textView8" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvLatitude_card2_frdetalhecarro"
                            android:layout_marginLeft="10dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/longitude_textview"
                            android:id="@+id/textView9" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvLongitude_card2_frdetalhecarro"
                            android:layout_marginLeft="10dp" />
                    </TableRow>

                </TableLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <fragment
                       android:id="@+id/map"
                       class="com.google.android.gms.maps.SupportMapFragment"
                       xmlns:tools="http://schemas.android.com/tools"
                       android:layout_width="match_parent"
                       android:layout_height="320dp"
                       android:layout_margin="12dp"
                       tools:context=".fragment.DetalheCarroFragment"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_detalhe_4"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="6dp"
            android:clickable="false"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:gravity="center">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <VideoView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/videoView_card4_frdetalhecarro"
                    android:layout_gravity="center" />

                <ImageView
                    android:layout_width="91dp"
                    android:layout_height="91dp"
                    android:id="@+id/imageView_card4_fradetalhecarro"
                    android:src="@drawable/play"
                    android:layout_gravity="center" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pb_card4_frdetalhe"
                    android:layout_gravity="center" />

            </FrameLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
    </ScrollView>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb_frdetalhecarro"
        android:layout_gravity="center" />

</FrameLayout>